Add a functional method

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-node_modules
-*~
-.DS_Store
+node_modules/
+dist/
+.env
 *.log
-logs
-compose.*.yaml
-compose.yaml
-.idea
-secrets
+.DS_Store
+coverage/
+.idea/
