--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dev": "tsup src/index.ts --dts --format cjs,esm --watch --sourcemap",
     "build": "tsup src/index.ts --dts --format cjs,esm --sourcemap",
     "test": "vitest run",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "example:hotel-details": "node examples/cli-hotel-details.js",
+    "example:hotel-details-fixed": "node examples/cli-hotel-details-fixed.js"
   },
   "engines": { "node": ">=18" },
   "dependencies": {
